Fixed a css bug where a regular DatePicker field would be visible if shown with a Date and Timepicker field

--- a/css/jquery-ui-timepicker-addon.css
+++ b/css/jquery-ui-timepicker-addon.css
@@ -8,3 +8,4 @@
 .ui-timepicker-rtl{ direction: rtl; }
 .ui-timepicker-rtl dl { text-align: right; }
 .ui-timepicker-rtl dl dd { margin: 0 65px 10px 10px; }
+.acf-ui-datepicker .ui-datepicker { display: none; }
